@@ -6,6 +6,11 @@ use warnings;
 our $VERSION = '0.33';
 
 use Fey::FakeDBI;
+use Fey::Literal::Function;
+use Fey::Literal::Null;
+use Fey::Literal::Number;
+use Fey::Literal::String;
+use Fey::Literal::Term;
 use Fey::Types;
 use Scalar::Util qw( blessed looks_like_number );
 use overload ();
@@ -44,21 +49,9 @@ sub new_from_scalar
            : Fey::Literal::String->new($val);
 }
 
-sub id
-{
-    return $_[0]->sql('Fey::FakeDBI');
-}
-
 no Moose;
 
 __PACKAGE__->meta()->make_immutable();
-
-# Need to be loaded after this package is made immutable.
-require Fey::Literal::Function;
-require Fey::Literal::Null;
-require Fey::Literal::Number;
-require Fey::Literal::String;
-require Fey::Literal::Term;
 
 1;
 
@@ -66,7 +59,7 @@ __END__
 
 =head1 NAME
 
-Fey::Literal - Represents a literal piece of a SQL statement
+Fey::Literal - Factory for making a literal piece of a SQL statement
 
 =head1 SYNOPSIS
 
@@ -74,11 +67,8 @@ Fey::Literal - Represents a literal piece of a SQL statement
 
 =head1 DESCRIPTION
 
-This class represents a literal piece of a SQL statement, such as a
-string, number, or function.
-
-It is the superclass for several more specific C<Fey::Literal>
-subclasses, and also provides short
+This class is a factory for creating a literal piece of a SQL statement, such
+as a string, number, or function.
 
 =head1 METHODS
 
@@ -90,26 +80,6 @@ Given a string, number, or undef, this method returns a new object of
 the appropriate subclass. This will be either a
 C<Fey::Literal::String>, C<Fey::Literal::Number>, or
 C<Fey::Literal::Null>.
-
-=head2 $literal->set_alias_name($alias)
-
-Use this to explicitly set a literal's alias name for use in SQL.  If you don't
-set this, it will be autogenerated as needed.
-
-=head2 $literal->id()
-
-Returns a unique id for a literal object.
-
-=head2 $literal->sql()
-
-=head2 $literal->sql_with_alias()
-
-=head2 $literal->sql_or_alias()
-
-Returns the appropriate SQL snippet.
-
-Calling C<< $literal->sql_with_alias() >> causes a unique alias for
-the literal to be created.
 
 =head1 AUTHOR
 
